@@ -1,41 +1,0 @@
-addons:
-  apt:
-    packages:
-      - aspell
-      - aspell-en
-language: perl
-perl:
-  - "5.32"
-  - "5.30"
-  - "5.28"
-  - "5.26"
-  - "5.24"
-  - "5.22"
-  - "5.20"
-  - "5.18"
-  - "5.16"
-  - "5.14"
-  - blead       # builds perl from git
-  - dev         # latest point release
-jobs:
-  fast_finish: 1
-env:
-  global:
-    - PERL_USE_UNSAFE_INC=0
-    - AUTHOR_TESTING=1
-    - AUTOMATED_TESTING=1
-    - RELEASE_TESTING=0
-before_install:
-  - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
-  - source ~/travis-perl-helpers/init
-  - build-perl
-  - perl -V
-  - build-dist
-  - cd $BUILD_DIR
-install:
-  - perl -M5.014 -e1 2>/dev/null || cpan-install Dist::Zilla@5.048
-  - cpan-install --deps
-script:
-  - perl Build.PL
-  - ./Build
-  - prove -b -r -s -j$(test-jobs) $(test-files)
