@@ -23,7 +23,6 @@ bugtracker.rt = 1
 
 [GatherDir::Template]
 root = skel
-rename.travis.yml = '.travis.yml'
 rename.gitattributes = '.gitattributes'
 
 [ReadmeAnyFromPod]
