@@ -1,40 +1,0 @@
-addons:
-  apt:
-    packages:
-      - aspell
-      - aspell-en
-language: perl
-perl:
-  - blead   # builds perl from git
-  - dev     # latest point release
-{{
-    use Module::CoreList;
-    use List::Util 'first';
-    my @all_perl_releases = reverse sort keys %Module::CoreList::released;
-    my $latest_stable_perl = first { /^5\.(\d{3})/; defined $1 and $1 % 2 == 0 } @all_perl_releases;
-    my ($major_ver) = $latest_stable_perl =~ /^5\.(\d{3})/;
-    join "\n", map '  - "5.'.$_.'"', reverse grep $_ % 2 == 0, (8 .. $major_ver);
-}}
-matrix:
-  fast_finish: 1
-env:
-  global:
-    - PERL_USE_UNSAFE_INC=0
-    - AUTHOR_TESTING=1
-    - AUTOMATED_TESTING=1
-    - RELEASE_TESTING=0
-before_install:
-  - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
-  - source ~/travis-perl-helpers/init
-  - build-perl
-  - perl -V
-  - build-dist
-  - cd $BUILD_DIR
-install:{{
-    ($dist->name =~ /^Dist-Zilla-/ ? "\n  - perl -M5.014 -e1 2>/dev/null || cpan-install Dist::Zilla\@5.048" : '' )
-}}
-  - cpan-install --deps
-script:
-  - perl Build.PL
-  - ./Build
-  - prove -b -r -s -j$(test-jobs) $(test-files)
